# 3DMusicVisualizer

3DViz/: CMakeLists.txt
3DViz/res/model/bass/: bass.mtl
3DViz/res/model/cube/: cube.mtl
3DViz/res/model/mic/: mic.mtl
3DViz/res/model/plane/: plane.mtl
3DViz/res/model/tetrahedron/: tetrahedron.mtl
3DViz/src/cpp/: camera.cpp  camera.h  main.cpp
3DViz/src/cpp/loaders/font/: character.cpp  character.h  load_font.cpp  load_font.h
3DViz/src/cpp/loaders/image/: image.cpp  image.h  load_image.cpp  load_image.h
3DViz/src/cpp/loaders/model/: load_model.cpp  load_model.h  mesh_data.cpp  mesh_data.h  model_data.cpp  model_data.h
3DViz/src/cpp/loaders/text/: load_text.cpp
3DViz/src/cpp/objects/: AudioObject.cpp  AudioObject.h  AudioVis.h  PlayBack.cpp  PlayBack.h  object3d.cpp  object3d.h  skybox.cpp  skybox.h  text_object.cpp  text_object.h  textured_model.cpp  textured_model.h
3DViz/src/cpp/utils/: opengl.cpp  opengl.h
3DViz/src/glsl/: color-fragment.glsl  color-vertex.glsl  font-fragment.glsl  font-vertex.glsl  lighting.glsl  shadow-fragment.glsl  shadow-vertex.glsl  skybox-fragment.glsl  skybox-vertex.glsl  texture-fragment.glsl  texture-vertex.glsl
libraries/: CMakeLists.txt
libraries/assimp-5.0.1/code/Common/: StandardShapes.cpp
libraries/assimp-5.0.1/include/assimp/: StandardShapes.h  mesh.h
libraries/assimp-5.0.1/port/dAssimp/assimp/: mesh.d
libraries/assimp-5.0.1/test/models-nonbsd/FBX/2013_ASCII/: kwxport_test_vcolors.fbx
libraries/assimp-5.0.1/test/models/Collada/: kwxport_test_vcolors.dae
libraries/assimp-5.0.1/test/models/IRR/: EpisodeII_TheDwarfesStrikeBack.irr  box.irr  multipleAnimators.irr  scenegraphAnim.irr
libraries/assimp-5.0.1/test/models/X/: kwxport_test_cubewithvcolors.x  test.txt
libraries/assimp-5.0.1/tools/assimp_view/: help.rtf
libraries/glew-2.1.0/: glew.pc
libraries/glm/glm/gtc/: noise.inl
libraries/stb/: CMakeLists.txt
